# SKILLRET

./: README.md  pyproject.toml
scripts/: run_eval_embedding.sh  run_eval_rerank.sh
skillret/: __init__.py  _compat.py  config.py  eval.py  utils.py
taxonomy_create/: s0_filter.py  s1_tag_skills.py  s2_stable_groups.py  s3_group_to_taxonomy.py  s4_taxonomy.py  s4b_llm_assign.py  s6_sample_for_review.py
train/: run_all.sh
train/4gpu-qwen3-0.6b/: train.py
train/4gpu-qwen3-8b/: train.py
train/reranker-ft/: train.py
train/reranker-ft/configs/: qwen3-reranker-0.6b-sft-emb06b-best.yaml
