[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillret"
version = "0.1.0"
description = "Benchmark for evaluating embedding models on Cursor Agent Skill retrieval"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = "==3.13.*"
dependencies = [
    "accelerate==1.13.0",
    "bm25s",
    "einops==0.8.2",
    "faiss-gpu-cu12",
    "FlagEmbedding==1.3.5",
    "numpy==2.4.3",
    "Pillow>=11.0",
    "peft==0.18.1",
    "pytrec-eval-terrier==0.5.10",
    "rerankers==0.10.0",
    "safetensors==0.7.0",
    "sentence-transformers==5.4.1",
    "sentencepiece==0.2.1",
    "tabulate==0.10.0",
    "flash-attn",
    "ninja",
    "torch",
    "torchvision",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "wandb",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["skillret*"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
extra-build-variables = { flash-attn = { MAX_JOBS = "64", FLASH_ATTN_CUDA_ARCHS = "100" } }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
